# apertium-ind

./: .gitattributes  .gitignore  ACKNOWLEDGEMENTS  AUTHORS  COMPOUNDWORDLIST  DEVELOPER_NOTES  INSTALL  Makefile  Makefile.am  MorphophonemicRules9-1.xfst  README  README.id  apertium-id-ms.hyphenrule.xfst  apertium-id-ms.id-ms.dix.xml  apertium-id-ms.id.dix.xml  apertium-id-ms.id.lexc  apertium-id-ms.morpho.xfst  apertium-id-ms.ms.dix.xml  apertium-ind.ind.dix  apertium-ind.ind.foma  apertium-ind.ind.lexc  apertium-ind.morphophonemic.xfst  apertium-ind.pc.in  apertium-to-foma.pl  comp-words.pl  configure.ac  foma-to-apertium.pl  main-id.foma  modes.xml  morphotactic-lexc-id.txt  morphotactic-lexc-ms.txt  pending-tests.sh
dev/: story.id.txt
morpheme-stripper/: apertium-id-ms-stripmorpheme.lexc  main-stripmorpheme.foma
speller/: editdist.default.txt  index.xml  strings.default.txt
split/: ID-LEXICAL_ENTRIES  MS-LEXICAL_ENTRIES  README  apertium-id-ms.core.lexc  lex-entry-split.pl
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
